Lab2/Code/syntax.output
State 138 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error SEMI
    9       | error Specifier SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error ExtDefList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | ε

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB
   23       | error RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | ID LP error RP
   27       | error LP VarList RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC
   32       | error RC

   33 StmtList: Stmt StmtList
   34         | ε

   35 Stmt: Exp SEMI
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | IF LP Exp RP Stmt error
   39     | IF LP Exp RP Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | WHILE LP Exp RP Stmt
   42     | error SEMI
   43     | Exp error SEMI
   44     | RETURN Exp error
   45     | RETURN error SEMI

   46 DefList: Def DefList
   47        | ε

   48 Def: Specifier DecList SEMI
   49    | Specifier error SEMI
   50    | Specifier DecList error

   51 DecList: Dec
   52        | Dec COMMA DecList

   53 Dec: VarDec
   54    | VarDec ASSIGNOP Exp

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp AND Exp
   57    | Exp OR Exp
   58    | Exp RELOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp STAR Exp
   62    | Exp DIV Exp
   63    | LP Exp RP
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp DOT ID
   70    | ID
   71    | INT
   72    | FLOAT
   73    | ERRORNUM
   74    | Exp LB Exp error RB

   75 Args: Exp COMMA Args
   76     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 12 22 23 26 27 32 38 42 43 44 45 49 50 74
    INT (258) 21 71
    FLOAT (259) 72
    ID (260) 17 19 20 24 25 26 66 67 69 70
    TYPE (261) 13
    RELOP (262) 58
    ASSIGNOP (263) 54 55
    PLUS (264) 59
    MINUS (265) 60 64
    STAR (266) 61
    DIV (267) 62
    AND (268) 56
    OR (269) 57
    NOT (270) 65
    DOT (271) 69
    COMMA (272) 11 28 52 75
    SEMI (273) 4 5 7 8 9 35 37 42 43 45 48 49
    LP (274) 24 25 26 27 38 39 40 41 63 66 67
    RP (275) 24 25 26 27 38 39 40 41 63 66 67
    LB (276) 21 22 68 74
    RB (277) 21 22 23 68 74
    LC (278) 15 31
    RC (279) 15 31 32
    STRUCT (280) 15 16
    RETURN (281) 37 44 45
    IF (282) 38 39 40
    ELSE (283) 40
    WHILE (284) 41
    ERRORNUM (285) 73
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program (33)
        on left: 1
        on right: 0
    ExtDefList (34)
        on left: 2 3
        on right: 1 2 12
    ExtDef (35)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList (36)
        on left: 10 11 12
        on right: 4 11
    Specifier (37)
        on left: 13 14
        on right: 4 5 6 8 9 30 48 49 50
    StructSpecifier (38)
        on left: 15 16
        on right: 14
    OptTag (39)
        on left: 17 18
        on right: 15
    Tag (40)
        on left: 19
        on right: 16
    VarDec (41)
        on left: 20 21 22 23
        on right: 10 11 12 21 22 30 53 54
    FunDec (42)
        on left: 24 25 26 27
        on right: 6
    VarList (43)
        on left: 28 29
        on right: 24 27 28
    ParamDec (44)
        on left: 30
        on right: 28 29
    CompSt (45)
        on left: 31 32
        on right: 6 36
    StmtList (46)
        on left: 33 34
        on right: 31 33
    Stmt (47)
        on left: 35 36 37 38 39 40 41 42 43 44 45
        on right: 33 38 39 40 41
    DefList (48)
        on left: 46 47
        on right: 15 31 46
    Def (49)
        on left: 48 49 50
        on right: 46
    DecList (50)
        on left: 51 52
        on right: 48 50 52
    Dec (51)
        on left: 53 54
        on right: 51 52
    Exp (52)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
        on right: 35 37 38 39 40 41 43 44 54 55 56 57 58 59 60 61 62 63 64 65 68 69 74 75 76
    Args (53)
        on left: 75 76
        on right: 66 75


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • SEMI
    9       | error • Specifier SEMI

    TYPE    shift, and go to state 2
    SEMI    shift, and go to state 9
    STRUCT  shift, and go to state 3

    Specifier        go to state 10
    StructSpecifier  go to state 8


State 2

   13 Specifier: TYPE •

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT • OptTag LC DefList RC
   16                | STRUCT • Tag

    ID  shift, and go to state 11

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)
    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    8       | Specifier • error SEMI

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   14 Specifier: StructSpecifier •

    $default  reduce using rule 14 (Specifier)


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

    9 ExtDef: error Specifier • SEMI

    SEMI  shift, and go to state 22


State 11

   17 OptTag: ID •
   19 Tag: ID •

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 12

   15 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 23


State 13

   16 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 16 (StructSpecifier)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 16

    8 ExtDef: Specifier error • SEMI
   23 VarDec: error • RB
   27 FunDec: error • LP VarList RP

    SEMI  shift, and go to state 24
    LP    shift, and go to state 25
    RB    shift, and go to state 26


State 17

   20 VarDec: ID •
   24 FunDec: ID • LP VarList RP
   25       | ID • LP RP
   26       | ID • LP error RP

    LP  shift, and go to state 27

    $default  reduce using rule 20 (VarDec)


State 18

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 28


State 20

   10 ExtDecList: VarDec •
   11           | VarDec • COMMA ExtDecList
   12           | VarDec • error ExtDefList
   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB

    error  shift, and go to state 29
    COMMA  shift, and go to state 30
    LB     shift, and go to state 31

    SEMI  reduce using rule 10 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec • CompSt

    error  shift, and go to state 32
    LC     shift, and go to state 33

    CompSt  go to state 34


State 22

    9 ExtDef: error Specifier SEMI •

    $default  reduce using rule 9 (ExtDef)


State 23

   15 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 36
    Def              go to state 37


State 24

    8 ExtDef: Specifier error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 25

   27 FunDec: error LP • VarList RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 40


State 26

   23 VarDec: error RB •

    $default  reduce using rule 23 (VarDec)


State 27

   24 FunDec: ID LP • VarList RP
   25       | ID LP • RP
   26       | ID LP • error RP

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    RP      shift, and go to state 42
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 43
    ParamDec         go to state 40


State 28

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 29

   12 ExtDecList: VarDec error • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 44
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 30

   11 ExtDecList: VarDec COMMA • ExtDecList

    error  shift, and go to state 45
    ID     shift, and go to state 46

    ExtDecList  go to state 47
    VarDec      go to state 20


State 31

   21 VarDec: VarDec LB • INT RB
   22       | VarDec LB • error RB

    error  shift, and go to state 48
    INT    shift, and go to state 49


State 32

   32 CompSt: error • RC

    RC  shift, and go to state 50


State 33

   31 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 37


State 34

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 35

   48 Def: Specifier • DecList SEMI
   49    | Specifier • error SEMI
   50    | Specifier • DecList error

    error  shift, and go to state 52
    ID     shift, and go to state 46

    VarDec   go to state 53
    DecList  go to state 54
    Dec      go to state 55


State 36

   15 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 56


State 37

   46 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 57
    Def              go to state 37


State 38

   30 ParamDec: Specifier • VarDec

    error  shift, and go to state 45
    ID     shift, and go to state 46

    VarDec  go to state 58


State 39

   27 FunDec: error LP VarList • RP

    RP  shift, and go to state 59


State 40

   28 VarList: ParamDec • COMMA VarList
   29        | ParamDec •

    COMMA  shift, and go to state 60

    $default  reduce using rule 29 (VarList)


State 41

   26 FunDec: ID LP error • RP

    RP  shift, and go to state 61


State 42

   25 FunDec: ID LP RP •

    $default  reduce using rule 25 (FunDec)


State 43

   24 FunDec: ID LP VarList • RP

    RP  shift, and go to state 62


State 44

   12 ExtDecList: VarDec error ExtDefList •

    $default  reduce using rule 12 (ExtDecList)


State 45

   23 VarDec: error • RB

    RB  shift, and go to state 26


State 46

   20 VarDec: ID •

    $default  reduce using rule 20 (VarDec)


State 47

   11 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 48

   22 VarDec: VarDec LB error • RB

    RB  shift, and go to state 63


State 49

   21 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 64


State 50

   32 CompSt: error RC •

    $default  reduce using rule 32 (CompSt)


State 51

   31 CompSt: LC DefList • StmtList RC

    error     shift, and go to state 65
    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    LC        shift, and go to state 33
    RETURN    shift, and go to state 72
    IF        shift, and go to state 73
    WHILE     shift, and go to state 74
    ERRORNUM  shift, and go to state 75

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 76
    StmtList  go to state 77
    Stmt      go to state 78
    Exp       go to state 79


State 52

   23 VarDec: error • RB
   49 Def: Specifier error • SEMI

    SEMI  shift, and go to state 80
    RB    shift, and go to state 26


State 53

   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB
   53 Dec: VarDec •
   54    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 81
    LB        shift, and go to state 31

    $default  reduce using rule 53 (Dec)


State 54

   48 Def: Specifier DecList • SEMI
   50    | Specifier DecList • error

    error  shift, and go to state 82
    SEMI   shift, and go to state 83


State 55

   51 DecList: Dec •
   52        | Dec • COMMA DecList

    COMMA  shift, and go to state 84

    $default  reduce using rule 51 (DecList)


State 56

   15 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 15 (StructSpecifier)


State 57

   46 DefList: Def DefList •

    $default  reduce using rule 46 (DefList)


State 58

   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB
   30 ParamDec: Specifier VarDec •

    LB  shift, and go to state 31

    $default  reduce using rule 30 (ParamDec)


State 59

   27 FunDec: error LP VarList RP •

    $default  reduce using rule 27 (FunDec)


State 60

   28 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 85
    ParamDec         go to state 40


State 61

   26 FunDec: ID LP error RP •

    $default  reduce using rule 26 (FunDec)


State 62

   24 FunDec: ID LP VarList RP •

    $default  reduce using rule 24 (FunDec)


State 63

   22 VarDec: VarDec LB error RB •

    $default  reduce using rule 22 (VarDec)


State 64

   21 VarDec: VarDec LB INT RB •

    $default  reduce using rule 21 (VarDec)


State 65

   32 CompSt: error • RC
   42 Stmt: error • SEMI

    SEMI  shift, and go to state 86
    RC    shift, and go to state 50


State 66

   71 Exp: INT •

    $default  reduce using rule 71 (Exp)


State 67

   72 Exp: FLOAT •

    $default  reduce using rule 72 (Exp)


State 68

   66 Exp: ID • LP Args RP
   67    | ID • LP RP
   70    | ID •

    LP  shift, and go to state 87

    $default  reduce using rule 70 (Exp)


State 69

   64 Exp: MINUS • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 88


State 70

   65 Exp: NOT • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 89


State 71

   63 Exp: LP • Exp RP

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 90


State 72

   37 Stmt: RETURN • Exp SEMI
   44     | RETURN • Exp error
   45     | RETURN • error SEMI

    error     shift, and go to state 91
    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 92


State 73

   38 Stmt: IF • LP Exp RP Stmt error
   39     | IF • LP Exp RP Stmt
   40     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 93


State 74

   41 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 94


State 75

   73 Exp: ERRORNUM •

    $default  reduce using rule 73 (Exp)


State 76

   36 Stmt: CompSt •

    $default  reduce using rule 36 (Stmt)


State 77

   31 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 95


State 78

   33 StmtList: Stmt • StmtList

    error     shift, and go to state 65
    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    LC        shift, and go to state 33
    RETURN    shift, and go to state 72
    IF        shift, and go to state 73
    WHILE     shift, and go to state 74
    ERRORNUM  shift, and go to state 75

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 76
    StmtList  go to state 96
    Stmt      go to state 78
    Exp       go to state 79


State 79

   35 Stmt: Exp • SEMI
   43     | Exp • error SEMI
   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   74    | Exp • LB Exp error RB

    error     shift, and go to state 97
    RELOP     shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    SEMI      shift, and go to state 107
    LB        shift, and go to state 108


State 80

   49 Def: Specifier error SEMI •

    $default  reduce using rule 49 (Def)


State 81

   54 Dec: VarDec ASSIGNOP • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 109


State 82

   50 Def: Specifier DecList error •

    $default  reduce using rule 50 (Def)


State 83

   48 Def: Specifier DecList SEMI •

    $default  reduce using rule 48 (Def)


State 84

   52 DecList: Dec COMMA • DecList

    error  shift, and go to state 45
    ID     shift, and go to state 46

    VarDec   go to state 53
    DecList  go to state 110
    Dec      go to state 55


State 85

   28 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 28 (VarList)


State 86

   42 Stmt: error SEMI •

    $default  reduce using rule 42 (Stmt)


State 87

   66 Exp: ID LP • Args RP
   67    | ID LP • RP

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    RP        shift, and go to state 111
    ERRORNUM  shift, and go to state 75

    Exp   go to state 112
    Args  go to state 113


State 88

   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   64    | MINUS Exp •
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   74    | Exp • LB Exp error RB

    STAR  shift, and go to state 102
    DIV   shift, and go to state 103
    DOT   shift, and go to state 106
    LB    shift, and go to state 108

    $default  reduce using rule 64 (Exp)


State 89

   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   65    | NOT Exp •
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   74    | Exp • LB Exp error RB

    DOT  shift, and go to state 106
    LB   shift, and go to state 108

    $default  reduce using rule 65 (Exp)


State 90

   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   63    | LP Exp • RP
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   74    | Exp • LB Exp error RB

    RELOP     shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    RP        shift, and go to state 114
    LB        shift, and go to state 108


State 91

   45 Stmt: RETURN error • SEMI

    SEMI  shift, and go to state 115


State 92

   37 Stmt: RETURN Exp • SEMI
   44     | RETURN Exp • error
   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   74    | Exp • LB Exp error RB

    error     shift, and go to state 116
    RELOP     shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    SEMI      shift, and go to state 117
    LB        shift, and go to state 108


State 93

   38 Stmt: IF LP • Exp RP Stmt error
   39     | IF LP • Exp RP Stmt
   40     | IF LP • Exp RP Stmt ELSE Stmt

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 118


State 94

   41 Stmt: WHILE LP • Exp RP Stmt

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 119


State 95

   31 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 31 (CompSt)


State 96

   33 StmtList: Stmt StmtList •

    $default  reduce using rule 33 (StmtList)


State 97

   43 Stmt: Exp error • SEMI

    SEMI  shift, and go to state 120


State 98

   58 Exp: Exp RELOP • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 121


State 99

   55 Exp: Exp ASSIGNOP • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 122


State 100

   59 Exp: Exp PLUS • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 123


State 101

   60 Exp: Exp MINUS • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 124


State 102

   61 Exp: Exp STAR • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 125


State 103

   62 Exp: Exp DIV • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 126


State 104

   56 Exp: Exp AND • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 127


State 105

   57 Exp: Exp OR • Exp

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 128


State 106

   69 Exp: Exp DOT • ID

    ID  shift, and go to state 129


State 107

   35 Stmt: Exp SEMI •

    $default  reduce using rule 35 (Stmt)


State 108

   68 Exp: Exp LB • Exp RB
   74    | Exp LB • Exp error RB

    INT       shift, and go to state 66
    FLOAT     shift, and go to state 67
    ID        shift, and go to state 68
    MINUS     shift, and go to state 69
    NOT       shift, and go to state 70
    LP        shift, and go to state 71
    ERRORNUM  shift, and go to state 75

    Exp  go to state 130


State 109

   54 Dec: VarDec ASSIGNOP Exp •
   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   74    | Exp • LB Exp error RB

    RELOP     shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    LB        shift, and go to state 108

    $default  reduce using rule 54 (Dec)


State 110

   52 DecList: Dec COMMA DecList •

    $default  reduce using rule 52 (DecList)


State 111

   67 Exp: ID LP RP •

    $default  reduce using rule 67 (Exp)


State 112

   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   74    | Exp • LB Exp error RB
   75 Args: Exp • COMMA Args
   76     | Exp •

    RELOP     shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    COMMA     shift, and go to state 131
    LB        shift, and go to state 108

    $default  reduce using rule 76 (Args)


State 113

   66 Exp: ID LP Args • RP

    RP  shift, and go to state 132


State 114

   63 Exp: LP Exp RP •

    $default  reduce using rule 63 (Exp)


State 115

   45 Stmt: RETURN error SEMI •

    $default  reduce using rule 45 (Stmt)


State 116

   44 Stmt: RETURN Exp error •

    $default  reduce using rule 44 (Stmt)


State 117

   37 Stmt: RETURN Exp SEMI •

    $default  reduce using rule 37 (Stmt)


State 118

   38 Stmt: IF LP Exp • RP Stmt error
   39     | IF LP Exp • RP Stmt
   40     | IF LP Exp • RP Stmt ELSE Stmt
   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   74    | Exp • LB Exp error RB

    RELOP     shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    RP        shift, and go to state 133
    LB        shift, and go to state 108


State 119

   41 Stmt: WHILE LP Exp • RP Stmt
   55 Exp: Exp • ASSIGNOP Exp
   56    | Exp • AND Exp
   57    | Exp • OR Exp
   58    | Exp • RELOP Exp
   59    | Exp • PLUS Exp
   60    | Exp • MINUS Exp
   61    | Exp • STAR Exp
   62    | Exp • DIV Exp
   68    | Exp • LB Exp RB
   69    | Exp • DOT ID
   74    | Exp • LB Exp error RB

    RELOP     shift, and go to state 98
    ASSIGNOP  shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    RP        shift, and go to state 134
    LB        shift, and go to state 108


State 120

   43 Stmt: Exp error SEMI •

    $default  reduce using rule 43 (Stmt)


State 121
